fix detailsUser / count users / style age condition

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,27 @@ h1 {
   color: red;
 }
 
+.green{
+  background-color: rgb(59, 181, 59);
+  padding: 10px;
+  border-radius: 10px;
+  margin: 30px 0;
+}
+
+.red{
+  background-color: rgb(169, 0, 0);
+  padding: 10px;
+  border-radius: 10px;
+  margin: 30px 0;
+}
+
+.blue{
+  background-color: rgb(94, 94, 255);
+  padding: 10px;
+  border-radius: 10px;
+  margin: 30px 0;
+}
+
 .navbar{
   display: flex;
   justify-content: space-evenly;
@@ -45,4 +66,22 @@ h1 {
 .main{
   padding: 30px;
   height: 100vh;
+}
+
+.ulUsers{
+  display: grid;
+  grid-template-columns: 2fr 2fr 2fr 2fr;
+  gap: 20px;
+
+  li{
+    list-style: none;
+    display: grid;
+    grid-template-columns: 1fr;
+
+    .nameUser{
+      color: rgb(86, 86, 86);
+      text-decoration: none;
+    }
+  }
+  
 }
